<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_description">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_order_message">You ordered an Ice Cream.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="radio_pick_up">Pick up</string>
    <string name="radio_next_day">Next day ground service</string>
    <string name="radio_same_day">Same day messenger service</string>
    <string name="chosen">Chosen: </string>
    <string name="nothing_clicked">onRadioButtonClick: </string>
</resources>
