<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:layout_below="@+id/textIntro"
        android:text="@string/choose_a_dessert" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/choose_dessert"
        android:contentDescription="@string/donut_description"
        android:onClick="showDonutOrder"
        app:srcCompat="@drawable/donut_circle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/choose_dessert"
        android:layout_toRightOf="@id/donut"
        android:text="@string/donut_description" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/donut"
        android:contentDescription="@string/ice_description"
        android:onClick="showIceOrder"
        app:srcCompat="@drawable/icecream_circle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/donut"
        android:layout_toRightOf="@id/ice_cream"
        android:text="@string/ice_description" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/ice_cream"
        android:contentDescription="@string/froyo_description"
        android:onClick="showFroyoOrder"
        app:srcCompat="@drawable/froyo_circle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:text="@string/froyo_description" />

</RelativeLayout>